# Agent-Nervous-System

./: .dockerignore  .gitignore  CLA-CORPORATE.md  CLA-ENFORCEMENT.md  CLA.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  go.sum  test_cla.txt
.github/: cla.json
.github/workflows/: cla.yml  release.yml
ans-tui/: go.mod
cmd/ans/: main.go  main_test.go
cmd/ans-dashboard/: README.md  main.go
examples/policies/: no-pii-open-weights.json
internal/assets/: assets.go  crt.kage
internal/broker/: broker.go  broker_test.go  dev.go  env.go  logger.go  provider_aws.go  provider_azure.go  provider_gcp.go  provider_oauth.go  provider_test.go  provider_vault.go
internal/chain/: chain.go  chain_concurrent_test.go  chain_fuzz_test.go  chain_test.go  export.go  export_parquet.go  export_pdf.go  merge.go  prune.go  verify.go
internal/cli/: cli.go  cli_test.go  cmd_chain.go  cmd_compensate.go  cmd_daemon.go  cmd_mcp.go  cmd_policy.go  cmd_snapshot.go  cmd_token.go  format.go
scripts/: install.ps1  install.sh
sdks/python/: README.md  pyproject.toml
sdks/python/ans/: __init__.py  broker.py  client.py  mcp.py  middleware.py  trace.py  wrap_model.py
sdks/python/ans/integrations/: __init__.py  anthropic_sdk.py  claude_agent_sdk.py  crewai.py  google_genai.py  langchain.py  langgraph.py  mcp.py  ollama.py  openai_agents.py  openai_compat.py  pydantic_ai.py
sdks/python/ans/tui/: README.md  __init__.py  __main__.py  app.py  screens.py  widgets.py
sdks/python/tests/: test_e2e.py  test_tui.py
spec/: chain.tla  verification.md
(+157 files in other folders)
